Publish Archive-It's implementation
- better matches the spec
